MB-26654 [RocksDB] Fix data races in 'delVBucket'

The new 'getStat' and 'getCachePointers' introduced two data races with
'delVBucket' when accessing the vector of opened DB instances.

Change-Id: Idebbebf7d2fb3e7cf77a9598047527e24916f75e
Reviewed-on: http://review.couchbase.org/85058
Tested-by: Build Bot <build@couchbase.com>
Reviewed-by: Dave Rigby <daver@couchbase.com>